// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TodoCard renders a component with expanded TodoStepList 1`] = `
<TodoCardWrapper
  theme={[ThemeObject]}
>
  <HeaderWrapper>
    <CardHeader>
      Todo title
    </CardHeader>
    <Status
      dataRole="todo-card-status-0"
      mediaType="only screen and (min-width: 1024px)"
      onClick={[Function]}
      status="COMPLETE"
      theme={[ThemeObject]}
    />
  </HeaderWrapper>
  <Goal
    data-role="todo-card-goal-0"
    onClick={[Function]}
  >
    Goal description
  </Goal>
  <TodoStepList
    dataRole="todo-card-step-list-0"
    steps={Array []}
  />
</TodoCardWrapper>
`;

exports[`TodoCard renders a component with non-expanded TodoStepList 1`] = `
<TodoCardWrapper
  theme={[ThemeObject]}
>
  <HeaderWrapper>
    <CardHeader>
      Todo title
    </CardHeader>
    <Status
      dataRole="todo-card-status-0"
      mediaType="only screen and (min-width: 1024px)"
      onClick={[Function]}
      status="COMPLETE"
      theme={[ThemeObject]}
    />
  </HeaderWrapper>
  <Goal
    data-role="todo-card-goal-0"
    onClick={[Function]}
  >
    Goal description
  </Goal>
</TodoCardWrapper>
`;
